implemented all endpoints through DTO